[package]
name = "roger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.0"
axum = "0.5.16"
eyre = "0.6.8"
opentelemetry = "0.18.0"
opentelemetry-jaeger = "0.17.0"
reqwest = "0.11.12"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3.15"
